syntax = "proto3";
package epp.eurid;
option go_package = "github.com/as207960/epp-proxy/gen/go/epp/eurid";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "common/common.proto";
import "domain_common/domain_common.proto";

message IDN {
    string ace = 1;
    string unicode = 2;
}

message ContactExtension {
    ContactType contact_type = 1;
    google.protobuf.StringValue whois_email = 2;
    google.protobuf.StringValue vat = 3;
    google.protobuf.StringValue citizenship_country = 4;
    string language = 5;
    bool has_reserved_domain = 6;
    bool has_domain_on_hold = 7;
    bool has_domain_registry_lock = 8;
    bool has_domain_registrar_lock = 9;
}

message ContactUpdateExtension {
    google.protobuf.StringValue new_whois_email = 1;
    google.protobuf.StringValue new_vat = 2;
    google.protobuf.StringValue new_citizenship_country = 3;
    google.protobuf.StringValue new_language = 4;
}

message DomainCheckData {
    google.protobuf.Timestamp available_date = 1;
    repeated domain_common.DomainStatus status = 2;
}

message DomainInfo {
    bool on_hold = 1;
    bool reserved = 13;
    bool quarantined = 2;
    bool suspended = 3;
    bool delayed = 4;
    bool seized = 5;
    google.protobuf.Timestamp deletion_date = 6;
    google.protobuf.StringValue on_site = 7;
    google.protobuf.StringValue reseller = 8;
    uint32 max_extension_period = 9;
    string registrant_country = 10;
    google.protobuf.StringValue registrant_country_of_citizenship = 11;
    google.protobuf.Timestamp auth_info_valid_until = 12;
    google.protobuf.StringValue registrar_reference = 14;
}

message DomainInfoRequest {
    oneof auth_info {
        bool request = 1;
        bool cancel = 2;
    }
}

message DomainTransferInfo {
    bool on_hold = 1;
    bool reserved = 10;
    bool quarantined = 2;
    bool delayed = 3;
    string reason = 4;
    string registrant = 5;
    string billing = 6;
    google.protobuf.StringValue on_site = 7;
    google.protobuf.StringValue technical = 8;
    google.protobuf.StringValue reseller = 9;
    google.protobuf.StringValue registrar_reference = 11;
}

message DomainRenewInfo {
    bool removed_deletion = 1;
}

message DomainCreateExtension {
    google.protobuf.StringValue on_site = 1;
    google.protobuf.StringValue reseller = 2;
    google.protobuf.StringValue registrar_reference = 3;
}

message DomainUpdateExtension {
    google.protobuf.StringValue add_on_site = 1;
    google.protobuf.StringValue add_reseller = 2;
    google.protobuf.StringValue remove_on_site = 3;
    google.protobuf.StringValue remove_reseller = 4;
    google.protobuf.StringValue registrar_reference = 5;
}

message DomainDeleteExtension {
    oneof delete {
        google.protobuf.Timestamp schedule = 1;
        bool cancel = 2;
    }
}

message DomainTransferExtension {
    string registrant = 1;
    google.protobuf.StringValue billing = 2;
    google.protobuf.StringValue technical = 3;
    google.protobuf.StringValue reseller = 4;
    google.protobuf.StringValue on_site = 5;
    google.protobuf.StringValue registrar_reference = 6;
}

enum ContactType {
    Registrant = 0;
    Billing = 1;
    Tech = 2;
    OnSite = 3;
    Reseller = 4;
}

message HitPointsReply {
    uint64 hit_points = 1;
    uint64 max_hit_points = 2;
    google.protobuf.Timestamp blocked_until = 3;
    common.CommandResponse cmd_resp = 4;
}

message RegistrationLimitReply {
    uint64 monthly_registrations = 1;
    google.protobuf.UInt64Value max_monthly_registrations = 2;
    google.protobuf.Timestamp limited_until = 3;
    common.CommandResponse cmd_resp = 4;
}

message DNSSECEligibilityRequest {
    string name = 1;
    google.protobuf.StringValue registry_name = 2;
}

message DNSSECEligibilityReply {
    bool eligible = 1;
    string message = 2;
    uint32 code = 3;
    common.CommandResponse cmd_resp = 4;
    string registry_name = 5;
}

message DNSQualityRequest {
    string name = 1;
    google.protobuf.StringValue registry_name = 2;
}

message DNSQualityReply {
    string score = 1;
    google.protobuf.Timestamp check_time = 2;
    common.CommandResponse cmd_resp = 3;
    string registry_name = 4;
}

message PollReply {
    string context = 1;
    string object_type = 2;
    string object = 3;
    google.protobuf.StringValue object_unicode = 4;
    string action = 5;
    uint32 code = 6;
    google.protobuf.StringValue detail = 7;
    google.protobuf.StringValue registrar = 8;
}